--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -4,8 +4,8 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
-body {
-  background-color: #333;
+main {
+  background-color: green;
 }
 
 
