--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -4,8 +4,9 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
-main {
-  background-color: green;
+body {
+  background-color: #333;
+  color: white;
 }
 
 
