--- a/templates/component/nav.html.twig
+++ b/templates/component/nav.html.twig
@@ -1,13 +1,19 @@
 <nav class="navbar">
-  <div class="logo">
-    <img src="{{ asset('img/logo.png') }}" alt="Logo BiblioBus" />
-  </div>
-  <a href="{{ path('app_home') }}">Accueil</a>
-  <a href="{{ path('app_register_info') }}">S'inscrire</a>
-  <a href="{{ path('app_login') }}">Se connecter</a>
-  <a href="{{ path('app_contact') }}">Contact</a>
-  <a href="{{ path('app_livres') }}">Liste des livres</a>
+	<div class="logo">
+		<img src="{{ asset('img/logo.png') }}" alt="Logo BiblioBus"/>
+	</div>
+	<a href="{{ path('app_home') }}">Accueil</a>
 
-  {% if app.user %}
-  	<li class="nav-item"></li>
+	{% if app.user %}
+	<a href="{{ path('app_contact') }}">Contact</a>
+	<a href="{{ path('app_livres') }}">Liste des livres</a>
+  <a href="{{ path('app_logout') }}">Déconnexion</a>
+	{% else %}
+		<a href="{{ path('app_register_info') }}">S'inscrire</a>
+		<a href="{{ path('app_login') }}">Se connecter</a>
+	{% endif %}
+
+	{% if app.user %}
+		<li class="nav-item"></li>
+	{% endif %}
 </nav>
