--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,61 +1,46 @@
-{% extends 'base.html.twig' %} 
+{% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %} 
+{% block title %}Log in!
+{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="/styles/seconnecter.css"/>
+	<link rel="stylesheet" href="/styles/seconnecter.css"/>
 {% endblock %}
 
 {% block main %}
+	<main>
+		<div class="hero">
+			<div class="login-form">
 
-<div class="hero">
-    <div class="login-form">
-        <form method="post">
-          {% if error %}
-          <div class="alert alert-danger">
-            {{ error.messageKey|trans(error.messageData, 'security') }}
-          </div>
-          {% endif %} {% if app.user %}
-          <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }},
-            <a href="{{ path('app_logout') }}">Logout</a>
-          </div>
-          {% endif %}
-        
-          <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-          <label for="inputEmail">Email</label>
-          <input
-            type="email"
-            value="{{ last_username }}"
-            name="email"
-            id="inputEmail"
-            class="form-control"
-            autocomplete="email"
-            required
-            autofocus
-          />
-          <label for="inputPassword">Password</label>
-          <input
-            type="password"
-            name="password"
-            id="inputPassword"
-            class="form-control"
-            autocomplete="current-password"
-            required
-          />
-        
-          <input
-            type="hidden"
-            name="_csrf_token"
-            value="{{ csrf_token('authenticate') }}"
-          />
-        
-          <div class="mb-3">
-            <label> <input type="checkbox" name="_remember_me" /> Remember me </label>
-          </div>
-        
-          <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
-        </form>
-    </div>
-</div>
+				{% include 'component/_alert.html.twig' with {'label' : 'success'} %}
+
+				{% if error %}
+					<div class="alert alert-danger">
+						{{ error.messageKey|trans(error.messageData, 'security') }}
+					</div>
+				{% endif %}
+
+				<form method="post">
+					<h1 class="">Please sign in</h1>
+					<label for="inputEmail">Email</label>
+					<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus/>
+					<label for="inputPassword">Password</label>
+					<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required/>
+					<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
+
+					<div class="">
+						<label>
+							<input type="checkbox" name="_remember_me"/>
+							Se souvenir de moi
+						</label>
+					</div>
+					<div class="">
+						<a href="#">Mot de passe oublié ?</a><br>
+					</div>
+
+					<button class="btn btn-lg btn-primary" type="submit">Connexion</button>
+				</form>
+			</div>
+		</div>
+	</main>
 {% endblock %}
