--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accueil</title>
+{% extends 'base.html.twig' %}
 
-    <link rel="stylesheet" href="/styles/app.css" />
-    
-  </head>
-  <body>
-    {% include 'component/nav.html.twig' %}
+{% block stylesheets %}
+<link rel="stylesheet" href="/styles/app.css"/>
+{% endblock %}
 
-    <main>
-      <h1>Hello</h1>
-    </main>
+{% block main %}
+  
+<main>
+	<h1>Hello</h1>
+</main>
 
-    <!-- <main>{% block content %}{% endblock %}</main> -->
-
-    
-  </body>
-</html>
+<!-- <main>{% block content %}{% endblock %}</main> -->
+{% endblock %}
