--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,7 +35,7 @@
 						</label>
 					</div>
 					<div class="">
-						<a href="#">Mot de passe oublié ?</a><br>
+						<a href="{{path('app_forgot_password_request')}}">Mot de passe oublié ?</a><br>
 					</div>
 
 					<button class="btn btn-lg btn-primary" type="submit">Connexion</button>
