mise en place de l'espace utilisateur et du profil

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -5,9 +5,10 @@
 {% endblock %}
 
 {% block main %}
-  
+
 <main>
-	<h1>Hello</h1>
+	<h1>Bibliobus</h1>
+	<p>Embarquer dans un voyage littéraire</p>
 </main>
 
 <!-- <main>{% block content %}{% endblock %}</main> -->
