--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -96,6 +96,12 @@
 
 							<ul class="nav flex-column mb-auto">
 								<li class="nav-item">
+									<a class="nav-link d-flex text-dark align-items-center gap-2" href="{{path('app_user_index')}}">
+										<i class="fa-solid fa-right-from-bracket"></i>
+										Espace privé
+									</a>
+								</li>
+								<li class="nav-item">
 									<a class="nav-link d-flex text-dark align-items-center gap-2" href="{{path('app_home')}}">
 										<i class="fa-solid fa-right-from-bracket"></i>
 										Retour au site
