--- a/templates/component/nav.html.twig
+++ b/templates/component/nav.html.twig
@@ -9,6 +9,9 @@
 		{% if is_granted('ROLE_ADMIN') %}
 			<a href="{{ path('app_admin_index') }}">Espace admin</a>
 		{% endif %}
+		{% if is_granted('ROLE_USER') %}
+			<a href="{{ path('app_user_index') }}">Espace privé</a>
+		{% endif %}
 		<a href="{{ path('app_logout') }}">Déconnexion</a>
 	{% else %}
 		<a href="{{ path('app_home') }}">Accueil</a>
