--- a/templates/email/reset_password_email.html.twig
+++ b/templates/email/reset_password_email.html.twig
@@ -1,9 +1,9 @@
-<h1>Hi!</h1>
+<h1>Bonjour {{ userFirstName }} {{ userLastName }}}}</h1>
 
-<p>To reset your password, please visit the following link</p>
+<p>Pour réinitaliser votre mot de passe, cliquez sur le lien</p>
 
 <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
 
-<p>This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+<p>Ce lien va expiré dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
 
-<p>Cheers!</p>
+<p>A plus tard!</p>
