--- a/templates/security/reset_password/check_email.html.twig
+++ b/templates/security/reset_password/check_email.html.twig
@@ -3,6 +3,10 @@
 {% block title %}Email de réinitialisation du mot de passe envoyé
 {% endblock %}
 
+{% block stylesheets %}
+	<link rel="stylesheet" href="/styles/seconnecter.css"/>
+{% endblock %}
+
 {% block description %}
 	Email de réinitialisation du mot de passe envoyé
 {% endblock %}
@@ -12,11 +16,13 @@
 
 {% block main %}
 	<main>
-		<p>
-			If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password. This link will expire in
-			{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
-		</p>
-		<p>If you don't receive an email please check your spam folder or
-			<a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+		<div>
+			<p>
+				Si un compte correspond à une adresse email, un email contenant le lien de réinitialisation vous a été envoyé. Ce lien expirera dans
+				{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+			</p>
+			<p>Si vous n'avez pas reçu d'email vérifié vos spams ou
+				<a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
+		</div>
 	</main>
 {% endblock %}
