--- a/templates/user/home/index.html.twig
+++ b/templates/user/home/index.html.twig
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Espace user</h1>
-</body>
-</html>
+{% extends 'base_user.html.twig' %}
+
+{% block title %}Tableau de bord
+{% endblock %}
+
+{% block description %}Tableau de bord
+{% endblock %}
+
+{% block keywords %}Tableau-de-bord
+{% endblock %}
+
+{% block main %}
+	<main>
+		<h1 class="text-center my-3 display-5">Bonjour
+			{{app.user.firstName}}!</h1>
+	</main>
+{% endblock %}
