modification du profil

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -38,7 +38,7 @@ header {
 
 main {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   flex-direction: column;
   height: 80vh;
