--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -21,6 +21,10 @@
 		{# font awesome #}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
+		{% block jQuery %}{% endblock %}
+		{% block dataTables %}{% endblock %}
+
+		
 	</head>
 	<body>
 		<header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
@@ -79,9 +83,9 @@
 
 							<ul class="nav flex-column mb-auto">
 								<li class="nav-item">
-									<a class="nav-link d-flex text-dark align-items-center gap-2" href="#">
+									<a class="nav-link d-flex text-dark align-items-center gap-2" href="{{path('app_admin_user_index')}}">
 										<i class="fa-solid fa-list"></i>
-										Utilisateur et rôles
+										Utilisateurs
 									</a>
 								</li>
 								<li class="nav-item">
