--- a/templates/component/nav.html.twig
+++ b/templates/component/nav.html.twig
@@ -5,7 +5,8 @@
 
 	{% if app.user %}
 		<a href="{{ path('app_contact') }}">Contact</a>
-		<a href="{{ path('app_livres') }}">Liste des livres</a>
+		<a href="{{ path('app_book_list') }}">Liste des livres</a>
+
 		{% if is_granted('ROLE_ADMIN') %}
 			<a href="{{ path('app_admin_index') }}">Espace admin</a>
 		{% endif %}
