--- a/templates/user/profile/index.html.twig
+++ b/templates/user/profile/index.html.twig
@@ -13,21 +13,48 @@
 	<main>
 		<h1 class="text-center my-3 display-5">Mon profil</h1>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-lg-6 mx-auto p-4 shadow bg-black">
-                    <p><strong>Nom</strong>: {{app.user.firstName}}</p>
-                    <p><strong>Prénom</strong>: {{app.user.lastName}}</p>
-                    <p><strong>Email</strong>: {{app.user.email}}</p>
-                    <p><strong>Adresse</strong>: {{app.user.address}}</p>
-                    <p><strong>Ville</strong>: {{app.user.city}}</p>
-                    <p><strong>Code postal</strong>: {{app.user.zipCode}}</p>
-                    <p><strong>Statut des frais de caution</strong>: {{app.user.isDepositPaid ? 'Payé' : 'Pas encore payé'}}</p>
-                    <p><strong>Statut des frais d'inscription</strong>: {{app.user.isDepositPaid ? 'Payé' : 'Pas encore payé'}}</p>
-                    <p><strong>Compte créé le</strong>: {{app.user.createdAt|format_datetime()}}</p>
-                    <p><strong>Compte modifié le</strong>: {{app.user.updatedAt|format_datetime()}}</p>
-                </div>
-            </div>
-        </div>
+        {% include 'component/_alert.html.twig' %}
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-lg-6 mx-auto p-4 shadow bg-green">
+					<p>
+						<strong>Nom</strong>:
+						{{app.user.firstName}}</p>
+					<p>
+						<strong>Prénom</strong>:
+						{{app.user.lastName}}</p>
+					<p>
+						<strong>Email</strong>:
+						{{app.user.email}}</p>
+					<p>
+						<strong>Adresse</strong>:
+						{{app.user.address}}</p>
+					<p>
+						<strong>Ville</strong>:
+						{{app.user.city}}</p>
+					<p>
+						<strong>Code postal</strong>:
+						{{app.user.zipCode}}</p>
+					<p>
+						<strong>Statut des frais de caution</strong>:
+						{{app.user.isDepositPaid ? 'Payé' : 'Pas encore payé'}}</p>
+					<p>
+						<strong>Statut des frais d'inscription</strong>:
+						{{app.user.isDepositPaid ? 'Payé' : 'Pas encore payé'}}</p>
+					<p>
+						<strong>Compte créé le</strong>:
+						{{app.user.createdAt|format_datetime()}}</p>
+					<p>
+						<strong>Compte modifié le</strong>:
+						{{app.user.updatedAt|format_datetime()}}</p>
+
+					<p class="d-flex justify-content-center align-items-center gap-3">
+						<a href="{{path('app_user_profile_edit')}}" class="btn btn-info">Modifier le profil</a>
+						<a href="#" class="btn btn-secondary">Modifier le mot de passe</a>
+					</p>
+				</div>
+			</div>
+		</div>
 	</main>
 {% endblock %}
