--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -8,7 +8,7 @@
         <div>
         {# faire l'entité book #}
             {% if book.exemplaires is not empty %}
-                <a href="" class="btn btn-primary"></a>
+                <a href="#" class="btn btn-primary"></a>
             {% endif %}
         </div>
     </div>
