changement des css de a page d'accueil

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,5 +16,13 @@
 		<body>
 			{% include 'component/nav.html.twig' %}
 			{% block main %}{% endblock %}
+			<footer>
+				<div>
+					BTS SIO Slam
+				</div>
+				<div>
+					&copy; Tous droit réservés
+				</div>
+			</footer>
 		</body>
 	</html>
