--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,13 +2,17 @@
 
 {% block stylesheets %}
 <link rel="stylesheet" href="/styles/app.css"/>
+<link rel="stylesheet" href="/styles/home.css"/>
 {% endblock %}
 
 {% block main %}
 
 <main>
-	<h1>Bibliobus</h1>
-	<p>Embarquer dans un voyage littéraire</p>
+<h1>
+	<strong>BiblioBus</strong>
+</h1>
+
+	<p>Embarquer dans un voyage littéraire !</p>
 </main>
 
 <!-- <main>{% block content %}{% endblock %}</main> -->
