--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #333;
-  color: white;
+  background: radial-gradient(circle, #0A5340, #0b0b0b);
+  color: #FFDDBF;
 }
 
 header {
@@ -40,7 +40,7 @@ main {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background: radial-gradient(circle, #075e2d, #0b0b0b);
+  height: 90vh;
 }
 
 .hero {
