--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -1,19 +1,9 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #a0a0a0, #004d2b);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
 .contact-container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    color: #000000;
 }
 
 .contact-form {
@@ -21,7 +11,6 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    width: 300px;
 }
 
 .contact-form label {
