--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,34 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #333;
-    color: white;
-}
-
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background: rgba(255, 255, 255, 0.1);
-}
-
-.logo img {
-    width: 40px; /* Adjust as needed */
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-nav a {
-    color: #ccc;
-    text-decoration: none;
-}
-
 .btn {
     padding: 5px 10px;
     border: none;
@@ -46,34 +15,19 @@ nav a {
     color: white;
 }
 
-main {
+
+.login-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80vh;
-    background: radial-gradient(circle, #075e2d, #0b0b0b); /* Match the background */
 }
 
-.hero {
-    text-align: center;
-}
-
-h1 {
-    font-size: 2.5em;
-}
-
-.bold {
-    font-weight: bold;
-    color: #F7E6C4;
-}
-
-/* Styles for the login form */
 .login-form {
     background-color: white;
     color: black;
     padding: 20px;
     border-radius: 5px;
-    text-align: left;  /* Align labels to the left */
+    text-align: left;
 }
 
 .login-form label {
@@ -89,7 +43,6 @@ h1 {
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box;  /* Important for width */
 }
 
 .login-form button[type="submit"] {
@@ -99,7 +52,7 @@ h1 {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 100%;  /* Make the button full width */
+    width: 100%;
 }
 
 .login-form button[type="submit"]:hover {
@@ -107,7 +60,7 @@ h1 {
 }
 
 .login-form a {
-    color: #007bff; /* Link color */
+    color: #007bff;
     text-decoration: none;
 }
 
