--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,9 @@
 			{% block title %}Bibliobus
 			{% endblock %}
 		</title>
-		<link rel="stylesheet" href="/styles/nav.css">
+		<link rel="stylesheet" href="/styles/component/nav.css">
+		<link rel="stylesheet" href="/styles/component/footer.css">
+
 		<link rel="icon" href="{{ asset('img/favicon/favicon.ico') }}" type="image/x-icon">
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
