--- a/templates/base_user.html.twig
+++ b/templates/base_user.html.twig
@@ -3,11 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Document</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+		<title>
+			{% block title %}
+				Bibliobus
+			{% endblock %}
+		</title>
+		<link rel="icon" href="{{ asset('img/favicon/favicon.ico') }}" type="image/x-icon">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> {% block stylesheets %}{% endblock %}{% block javascript %}{% endblock %}
 		<link rel="stylesheet" href="/styles/app.css"/>
-		<link rel="stylesheet" href="/styles/nav.css"/>
+		<link rel="stylesheet" href="/styles/component/nav.css"/>
+		<link rel="stylesheet" href="/styles/component/footer.css"/>
 	</head>
 	<body>
 		{% include 'component/nav_user.html.twig' %}
