--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,40 +1,33 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+{% extends 'base_user.html.twig' %}
 
-    <link rel="stylesheet" href="/styles/contact.css" />
+{% block title %}
+	Contact
+{% endblock %}
 
-    <header>
-        <div class="logo">
-          <img src="{{ asset('img/logo.png') }}"  alt="Logo BiblioBus" />
-        </div>
-        <nav>
-          <a href="{{ path('app_home') }}">Accueil</a>
+{% block stylesheets %}
+	<link rel="stylesheet" href="/styles/contact.css"/>
+{% endblock %}
 
-        </nav>
-      </header>
+{% block main %}
+	<main>
+		<div class="contact-container">
+			<div class="contact-form">
+				<form method="post">
+					<label for="nom">Nom</label>
+					<input type="text" id="nom" name="nom" required>
 
+					<label for="prenom">Prénom</label>
+					<input type="text" id="prenom" name="prenom" required>
 
-<div class="contact-container">
-    <div class="contact-form">
-        <form method="post">
-            <label for="nom">Nom</label>
-            <input type="text" id="nom" name="nom" required>
+					<label for="email">Email</label>
+					<input type="email" id="email" name="email" required>
 
-            <label for="prenom">Prénom</label>
-            <input type="text" id="prenom" name="prenom" required>
+					<label for="message">Message</label>
+					<textarea id="message" name="message" rows="4" required></textarea>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-
-            <button type="submit">Envoyer</button>
-        </form>
-    </div>
-</div>
-
+					<button type="submit">Envoyer</button>
+				</form>
+			</div>
+		</div>
+	</main>
+{% endblock %}
