ajout des tests et du style du formulaire de contact

--- a/templates/user/contact/index.html.twig
+++ b/templates/user/contact/index.html.twig
@@ -11,6 +11,8 @@
 {% block main %}
 	<main>
 		<div class="contact-container">
+			<h1 class="text-center my-3 display-5">Nous contactez</h1>
+
 			<div class="contact-form">
 				{% for message in app.flashes('success') %}
 					<div class="alert alert-success">{{ message }}</div>
