--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -1,5 +1,6 @@
 .contact-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -11,6 +12,12 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    min-width: 20%;
+    margin-top: 10px;
+}
+
+h1 {
+    color: #FFDDBF;
 }
 
 .contact-form label {
@@ -27,5 +34,3 @@
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-
-
