ajout de test et changement de quelque css de l'inscription

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -86,7 +86,7 @@
 			</div>
 
 
-			<button type="submit" class="btn">S'inscrire</button>
+			<button type="submit" class="btn btn-primary">S'inscrire</button>
 			{{ form_end(registrationForm) }}
 			<div class="bottom_circle">
 				<div class="circle"></div>
