ajout des entités de la base et création des fixtures

--- a/templates/component/nav_user.html.twig
+++ b/templates/component/nav_user.html.twig
@@ -5,7 +5,11 @@
 	<div>
 
 		<a href="{{ path('app_contact') }}">Contact</a>
-		<a href="{{ path('app_livres') }}">Liste des livres</a>
+		<a href="{{ path('app_book') }}">Liste des livres</a>
+
+		{# à supprimer quand la page 'liste livre est fini' #}
+		<a href="{{ path('app_book_test') }}">Test liste</a>
+		
 		<a href="#">Mes prêt</a>
 		<a href="#">Mes réservation</a>
 		<a href="{{path('app_user_profile_index')}}">Mon Profil</a>
