--- a/templates/base_user.html.twig
+++ b/templates/base_user.html.twig
@@ -18,7 +18,7 @@
 		{% include 'component/nav_user.html.twig' %}
 		{% block main %}{% endblock %}
 
-		<footer>
+		<footer class='footer'>
 			<div>
 				BTS SIO Slam
 			</div>
