--- a/templates/component/nav_user.html.twig
+++ b/templates/component/nav_user.html.twig
@@ -5,7 +5,7 @@
 	<div>
 
 		<a href="{{ path('app_contact') }}">Contact</a>
-		<a href="{{ path('app_book') }}">Liste des livres</a>
+		<a href="{{ path('app_book_list') }}">Liste des livres</a>
 
 		{# à supprimer quand la page 'liste livre est fini' #}
 		<a href="{{ path('app_book_test') }}">Test liste</a>
