--- a/templates/user/book/index.html.twig
+++ b/templates/user/book/index.html.twig
@@ -12,7 +12,21 @@
 	<main class='main_book'>
 		<div class="search-bar">
 			<input type="text" placeholder="Recherche de livre"/>
-			<button type="submit"><img src="img/magnifying-glass_1167092.png" alt="loupe"></button>
+			<button type="submit"><img src="/img/magnifying-glass_1167092.png" alt="loupe"></button>
 		</div>
+		{% for book in bookList %}
+			<div class="book">
+				<img src="{{book.image}}" alt="couverture">
+				<div>
+					<h3>{{book.title}}</h3>
+
+					<p>"{{book.summary}}"</p>
+
+					<a href='{{ path('app_book_details', {'id': book.id}) }}' class='btn btn-info'>Plus de détails</a>
+				</div>
+
+
+			</div>
+		{% endfor %}
 	</main>
 {% endblock %}
