--- a/templates/user/home/index.html.twig
+++ b/templates/user/home/index.html.twig
@@ -12,6 +12,6 @@
 {% block main %}
 	<main>
 		<h1 class="text-center my-3 display-5">Bonjour
-			{{app.user.firstName}}!</h1>
+			{{app.user.firstName}} {{app.user.lastName}}!</h1>
 	</main>
 {% endblock %}
