début de l emprunt

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,8 @@
 				<div>
 					&copy; Tous droit réservés
 				</div>
+				<a href="{{ path('livres_disponibles') }}">Liste des livres</a>
+
 			</footer>
 		</body>
 	</html>
