--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -20,6 +20,10 @@ href="https://cdn.datatables.net/v/bs5/dt-2.2.2/datatables.min.css" rel="stylesh
 </script>
 {% endblock %}
 
+{% block title %}
+    Utilisateurs
+{% endblock %}
+
 {% block main %}
 	<h1 class="text-center my-3 display-5">Liste des utilisateurs</h1>
 
