--- a/templates/admin/home/index.html.twig
+++ b/templates/admin/home/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base_admin.html.twig' %}
 
+{% block title %}
+    Accueil
+{% endblock %}
+
 {% block main %}
     <h1 class="text-center my-3 display-5">Bonjour {{app.user.firstName}} !</h1>
 {% endblock %}
