--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -10,11 +10,12 @@
 			{% block title %}{% endblock %}
 		</title>
 
-{% block stylesheets %}
-{% endblock %}
 
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		{% block stylesheets %}{% endblock %}
 		<link
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		rel="icon" href="{{ asset('img/favicon/favicon.ico') }}" type="image/x-icon">
+
 
 		<!-- Custom styles for this template -->
 		<link
@@ -71,15 +72,15 @@
 										</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link d-flex text-dark align-items-center gap-2" href="#">
+										{# <a class="nav-link d-flex text-dark align-items-center gap-2" href="#">
 											<i class="fa-solid fa-circle-notch"></i>
 											Tournées
 										</a>
-									</li>
+									</li> #}
 									<li class="nav-item">
-										<a class="nav-link d-flex text-dark align-items-center gap-2" href="#">
+										<a class="nav-link d-flex text-dark align-items-center gap-2" href="{{path('app_admin_emprunt')}}">
 											<i class="fa-solid fa-list"></i>
-											Réservation
+											Emprunt
 										</a>
 									</li>
 								</ul>
