--- a/templates/user/book/details.html.twig
+++ b/templates/user/book/details.html.twig
@@ -10,6 +10,14 @@
 
 {% block main %}
 	<main class='book_details'>
+
+		{% if message|default(false) %}
+			<div class="alert alert-success text-center" role="alert">
+				{{message}}
+			</div>
+		{% endif %}
+
+
 		<h1>{{book.title}}</h1>
 
 		<img src="{{book.image}}" alt="couverture">
@@ -24,9 +32,10 @@
 
 		<div class='button'>
 			<a href='{{ path('app_book_list') }}' class='btn btn-secondary'>Retour à la liste</a>
-			<a href='#' class='btn btn-info'>Réservé</a>
-		</div>
+			<a href='{{ path('app_book_reserve', {'id': book.id, 'user_id': app.user.id}) }}' class='btn btn-info'>Réservé</a>
 
+
+		</div>
 
 	</main>
 {% endblock %}
